feat: add docs for deleteOpening
